@@ -1,0 +1,5 @@
+# this program will quit early when
+# assertions are enabled
+
+assert 2 + 2 : "eh, assertions are enabled";
+println("Whee...");
