@@ -1,0 +1,1 @@
+Warning: eh, assertions are enabled at assertcompare.sl:4
